; ModuleID = '/home/carl/AnghaBench/memcached/extr_extstore.c_extstore_get_page_data.c'
source_filename = "/home/carl/AnghaBench/memcached/extr_extstore.c_extstore_get_page_data.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.extstore_stats = type { i32 }
%struct.TYPE_6__ = type { i32, %struct.TYPE_5__ }
%struct.TYPE_5__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @extstore_get_page_data(i8* %0, %struct.extstore_stats* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca %struct.extstore_stats*, align 8
  %5 = alloca %struct.TYPE_6__*, align 8
  store i8* %0, i8** %3, align 8
  store %struct.extstore_stats* %1, %struct.extstore_stats** %4, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = bitcast i8* %6 to %struct.TYPE_6__*
  store %struct.TYPE_6__* %7, %struct.TYPE_6__** %5, align 8
  %8 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %9 = call i32 @STAT_L(%struct.TYPE_6__* %8)
  %10 = load %struct.extstore_stats*, %struct.extstore_stats** %4, align 8
  %11 = getelementptr inbounds %struct.extstore_stats, %struct.extstore_stats* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %14 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %13, i32 0, i32 1
  %15 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %18 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = sext i32 %19 to i64
  %21 = mul i64 4, %20
  %22 = trunc i64 %21 to i32
  %23 = call i32 @memcpy(i32 %12, i32 %16, i32 %22)
  %24 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %25 = call i32 @STAT_UL(%struct.TYPE_6__* %24)
  ret void
}

declare dso_local i32 @STAT_L(%struct.TYPE_6__*) #1

declare dso_local i32 @memcpy(i32, i32, i32) #1

declare dso_local i32 @STAT_UL(%struct.TYPE_6__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
